--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -49,3 +49,18 @@ extra-dependencies = [
 [tool.ruff.lint]
 preview = true
 select = ["E20","E21","E22","E23","E24","E3","F401","F8"]
+
+[tool.coverage.run]
+source_pkgs = ["aiverify_apigw"]
+branch = true
+parallel = true
+
+[tool.coverage.paths]
+aiverify_apigw = ["aiverify_apigw/", "*/aiverify-apigw/aiverify_apigw"]
+
+[tool.coverage.report]
+exclude_lines = [
+  "no cov",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
+]
