--- a/aiverify-portal/.prettierrc.json
+++ b/aiverify-portal/.prettierrc.json
@@ -5,5 +5,6 @@
   "semi": true,
   "singleQuote": true,
   "bracketSameLine": true,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
