--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -20,9 +20,11 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vanilla-tilt": "^1.8.1"
+    "vanilla-tilt": "^1.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
@@ -31,7 +33,6 @@
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "@tailwindcss/typography": "^0.5.15",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   },
