--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.4",
