--- a/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/Dockerfile
+++ b/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/Dockerfile
@@ -1,14 +1,23 @@
 FROM python:3.11-slim
 
-RUN apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y git gcc
+# Combine all apt-get installations into a single layer with cleanup
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y \
+    git \
+    gcc \
+    libhdf5-dev \
+    pkg-config && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install HDF5 using apt
-RUN apt-get update && apt-get install -y libhdf5-dev pkg-config
+# Set environment variables for Python and pip
+ENV PYTHONUNBUFFERED=1
+ENV PIP_NO_CACHE_DIR=1
 
-RUN pip install --upgrade pip
-RUN pip install --no-binary h5py h5py
+# Combine pip installations into a single layer
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir --no-binary h5py h5py
 
 WORKDIR /app/aiverify
 
@@ -22,9 +31,10 @@ COPY stock-plugins/user_defined_files ./stock-plugins/user_defined_files
 COPY stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox ./stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox
 
 # Install algorithm requirements
-WORKDIR /app/aiverify/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox
-RUN pip install pytest
-RUN pip install -e '.[dev]'
+RUN cd aiverify-test-engine && \
+    pip install --no-cache-dir '.[dev]' && \
+    cd ../stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox && \
+    pip install --no-cache-dir .
 
 ENTRYPOINT ["python3", "-m", "aiverify_robustness_toolbox"]
 
