--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -163,7 +163,10 @@ jobs:
       if: github.event_name == 'pull_request'
       run: |
           ls
-          cd stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated-local-effect
+          cd stock-plugins
+          cd aiverify.stock.accumulated-local-effect
+          cd algorithms
+          cd accumulated-local-effect
           python3 -m venv venv
           source venv/bin/activate
           bash <(curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=accumulated_local_effect --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="accumulated_local_effect_$BRANCH" --detect.excluded.directories=venv,tests --blackduck.trust.cert=true
